# snb

./: Cargo.toml  LICENSE  README.md
src/: bookmarks.rs  folders.rs  main.rs  notes.rs
src/common/: index.rs  init.rs  log.rs  mod.rs  utils.rs
