[package]
name = "snb"
version = "0.2.1"
edition = "2021"
authors = ["Mandar Vaze"]
description = "Plain text notes from the terminal. A Rust port of nb."
license = "MIT"
repository = "https://codeberg.org/mandarvaze/snb"
keywords = ["cli", "tool", "rust", "notes"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
home = "0.5.5"
chrono = "0.4"
clap-verbosity-flag = "3.0.2"
